[gd_scene load_steps=2 format=3 uid="uid://cjojueq0q3qxc"]

[ext_resource type="Script" path="res://scripts/death_screen.gd" id="1_tomri"]

[node name="DeathScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1280.0
offset_bottom = -720.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tomri")

[node name="DeathText" type="Label" parent="."]
layout_mode = 2
offset_left = 561.0
offset_top = 110.0
offset_right = 718.0
offset_bottom = 162.0
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 35
text = "You died!"

[node name="Score" type="Label" parent="."]
layout_mode = 2
offset_left = 428.0
offset_top = 235.0
offset_right = 515.0
offset_bottom = 261.0
text = "Your score:"

[node name="Highscore" type="Label" parent="."]
layout_mode = 2
offset_left = 428.0
offset_top = 318.0
offset_right = 515.0
offset_bottom = 344.0
text = "Highscore:"

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 390.0
offset_top = 489.0
offset_right = 890.0
offset_bottom = 520.0
size_flags_vertical = 4
alignment = 1

[node name="New Game" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "New Game"

[node name="Main Menu" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Main Menu"

[node name="Quit" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quit"

[connection signal="pressed" from="Buttons/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Buttons/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_quit_pressed"]
